camera timed capture for emulator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="client_id">KU4yIF-RRI_I_mGjzdVqd8Gd780HFSsYz98VXKGq</string>
+    <string name="client_secret">CDzJI7PRBSsYIFyNVi8q6jbzXh8DxEbgN_3QMaNE</string>
+    <string name="title_activity_surveillence">SurveillenceActivity</string>
 </resources>
